force-app/main/default/objects/CADD_Management_History__c/CADD_Management_History__c.object-meta.xml
<CustomObject>
    <label>CADD Management History</label>
    <nameField>
        <label>CADD Management History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CADD Management Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>