force-app/main/default/objects/CADD_Management_History__c/fields/CDP_Name__c.field-meta.xml
<CustomField>
    <fullName>CDP_Name__c</fullName>
    <label>CDP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>