force-app/main/default/objects/CADD_Management_History__c/fields/CIS_Global_ID__c.field-meta.xml
<CustomField>
    <fullName>CIS_Global_ID__c</fullName>
    <label>CIS Global ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>