force-app/main/default/objects/CADD_Management_History__c/fields/CIS_Name__c.field-meta.xml
<CustomField>
    <fullName>CIS_Name__c</fullName>
    <label>CIS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>