force-app/main/default/objects/CADD_Management_History__c/fields/Customer_Country_code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_code__c</fullName>
    <label>Customer Country code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>