force-app/main/default/objects/CADD_Management_History__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <label>Master Customer Number (MCN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>