force-app/main/default/objects/CADD_Management_History__c/fields/delivery_to_address1__c.field-meta.xml
<CustomField>
    <fullName>delivery_to_address1__c</fullName>
    <label>Delivery To Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>