force-app/main/default/objects/CADD_Management_History__c/fields/Delivery_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_To_Location__c</fullName>
    <label>Delivery To Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>