force-app/main/default/objects/CADD_Management_History__c/fields/Max_Scheduled_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Scheduled_Arrival_Date__c</fullName>
    <label>Max Scheduled Arrival Date</label>
    <type>Date</type>
</CustomField>