force-app/main/default/objects/CADD_Management_History__c/fields/Order_number__c.field-meta.xml
<CustomField>
    <fullName>Order_number__c</fullName>
    <label>Order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>