force-app/main/default/objects/CADD_Management_History__c/fields/Party_No__c.field-meta.xml
<CustomField>
    <fullName>Party_No__c</fullName>
    <label>Party No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>