force-app/main/default/objects/CADD_Management_History__c/fields/PDChangedOn__c.field-meta.xml
<CustomField>
    <fullName>PDChangedOn__c</fullName>
    <label>PDChangedOn</label>
    <type>DateTime</type>
</CustomField>