force-app/main/default/objects/CADD_Management_History__c/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>