force-app/main/default/objects/CADD_Management_History__c/fields/SalesOrdCode__c.field-meta.xml
<CustomField>
    <fullName>SalesOrdCode__c</fullName>
    <label>SalesOrgCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>