force-app/main/default/objects/CADD_Management_History__c/fields/Salesperson_Global_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Global_Id__c</fullName>
    <label>Salesperson Global Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>