force-app/main/default/objects/CADD_Management_History__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>