force-app/main/default/objects/CADD_Management_History__c/fields/threshold__c.field-meta.xml
<CustomField>
    <fullName>threshold__c</fullName>
    <label>Threshold</label>
    <length>2</length>
    <type>Text</type>
</CustomField>